--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,7 @@ body {
 :root {
   // Aurora
   --main-gradient: linear-gradient(130deg, #24c6dc, #5433ff 41.07%, #ff0099 76.05%);
+  --strong-gradient: linear-gradient(62deg, #188bfd 0%, #a03bff 100%);
   --main-transition: all 0.25s ease-in-out;
   --text-vip: rgb(251, 146, 60);
 
