Add blog search

--- a/src/assets/css/el.css
+++ b/src/assets/css/el.css
@@ -41,6 +41,7 @@
   --el-border-color: var(--border-color-bright);
   --el-border-color-hover: var(--text-accent);
   --el-color-primary: var(--text-accent);
+  --el-text-color-placeholder: var(--text-dim);
 }
 
 .el-popper {
