--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -11,44 +11,15 @@
   --text-sub-accent: #5433ff;
   --text-dim: #858585;
   --text-faint: #b2b2b2;
-  --banner-cover: linear-gradient(
-    180deg,
-    hsla(225, 40%, 96%, 0) 0,
-    hsla(225, 40%, 96%, 0.013) 8.1%,
-    hsla(225, 40%, 96%, 0.049) 15.5%,
-    hsla(225, 40%, 96%, 0.104) 22.5%,
-    hsla(225, 40%, 96%, 0.175) 29%,
-    hsla(225, 40%, 96%, 0.259) 35.3%,
-    hsla(225, 40%, 96%, 0.352) 41.2%,
-    hsla(225, 40%, 96%, 0.45) 47.1%,
-    hsla(225, 40%, 96%, 0.55) 52.9%,
-    hsla(225, 40%, 96%, 0.648) 58.8%,
-    hsla(225, 40%, 96%, 0.741) 64.7%,
-    hsla(225, 40%, 96%, 0.825) 71%,
-    hsla(225, 40%, 96%, 0.896) 77.5%,
-    hsla(225, 40%, 96%, 0.951) 84.5%,
-    hsla(225, 40%, 96%, 0.987) 91.9%,
-    var(--background-primary)
-  );
-  --article-cover: linear-gradient(
-    180deg,
-    hsla(0, 0%, 98%, 0),
-    hsla(0, 0%, 98%, 0.013) 8.1%,
-    hsla(0, 0%, 98%, 0.049) 15.5%,
-    hsla(0, 0%, 98%, 0.104) 22.5%,
-    hsla(0, 0%, 98%, 0.175) 29%,
-    hsla(0, 0%, 98%, 0.259) 35.3%,
-    hsla(0, 0%, 98%, 0.352) 41.2%,
-    hsla(0, 0%, 98%, 0.45) 47.1%,
-    hsla(0, 0%, 98%, 0.55) 52.9%,
-    hsla(0, 0%, 98%, 0.648) 58.8%,
-    hsla(0, 0%, 98%, 0.741) 64.7%,
-    hsla(0, 0%, 98%, 0.825) 71%,
-    hsla(0, 0%, 98%, 0.896) 77.5%,
-    hsla(0, 0%, 98%, 0.951) 84.5%,
-    hsla(0, 0%, 98%, 0.987) 91.9%,
-    var(--background-secondary)
-  );
+  /* 横幅遮盖颜色 */
+  /* prettier-ignore */
+  --banner-cover: linear-gradient(180deg, hsla(225, 40%, 96%, 0) 0, hsla(225, 40%, 96%, .013) 8.1%, hsla(225, 40%, 96%, .049) 15.5%, hsla(225, 40%, 96%, .104) 22.5%, hsla(225, 40%, 96%, .175) 29%, hsla(225, 40%, 96%, .259) 35.3%, hsla(225, 40%, 96%, .352) 41.2%, hsla(225, 40%, 96%, .45) 47.1%, hsla(225, 40%, 96%, .55) 52.9%, hsla(225, 40%, 96%, .648) 58.8%, hsla(225, 40%, 96%, .741) 64.7%, hsla(225, 40%, 96%, .825) 71%, hsla(225, 40%, 96%, .896) 77.5%, hsla(225, 40%, 96%, .951) 84.5%, hsla(225, 40%, 96%, .987) 91.9%, var(--background-primary));
+  /* 文章水平遮盖颜色 */
+  /* prettier-ignore */
+  --article-cover-horizontal: linear-gradient(180deg, hsla(0, 0%, 98%, 0) 0, hsla(0, 0%, 98%, .013) 8.1%, hsla(0, 0%, 98%, .049) 15.5%, hsla(0, 0%, 98%, .104) 22.5%, hsla(0, 0%, 98%, .175) 29%, hsla(0, 0%, 98%, .259) 35.3%, hsla(0, 0%, 98%, .352) 41.2%, hsla(0, 0%, 98%, .45) 47.1%, hsla(0, 0%, 98%, .55) 52.9%, hsla(0, 0%, 98%, .648) 58.8%, hsla(0, 0%, 98%, .741) 64.7%, hsla(0, 0%, 98%, .825) 71%, hsla(0, 0%, 98%, .896) 77.5%, hsla(0, 0%, 98%, .951) 84.5%, hsla(0, 0%, 98%, .987) 91.9%, var(--background-secondary));
+  /* 文章垂直遮盖颜色 */
+  /* prettier-ignore */
+  --article-cover-vertical: linear-gradient(90deg, hsla(0, 0%, 98%, 0) 0, hsla(0, 0%, 98%, .013) 8.1%, hsla(0, 0%, 98%, .049) 15.5%, hsla(0, 0%, 98%, .104) 22.5%, hsla(0, 0%, 98%, .175) 29%, hsla(0, 0%, 98%, .259) 35.3%, hsla(0, 0%, 98%, .352) 41.2%, hsla(0, 0%, 98%, .45) 47.1%, hsla(0, 0%, 98%, .55) 52.9%, hsla(0, 0%, 98%, .648) 58.8%, hsla(0, 0%, 98%, .741) 64.7%, hsla(0, 0%, 98%, .825) 71%, hsla(0, 0%, 98%, .896) 77.5%, hsla(0, 0%, 98%, .951) 84.5%, hsla(0, 0%, 98%, .987) 91.9%, var(--background-secondary));
   --border-color-normal: #d0d7de;
   --border-color-bright: #dcdfe6;
 
@@ -71,44 +42,15 @@ html[data-theme='dark'] {
   --text-sub-accent: #ff0099;
   --text-dim: #6d6d6d;
   --text-faint: #7aa2f7;
-  --banner-cover: linear-gradient(
-    180deg,
-    hsla(0, 0%, 10%, 0) 0,
-    hsla(0, 0%, 10%, 0.01) 8.1%,
-    hsla(0, 0%, 10%, 0.049) 15.5%,
-    hsla(0, 0%, 10%, 0.104) 22.5%,
-    hsla(0, 0%, 10%, 0.175) 29%,
-    hsla(0, 0%, 10%, 0.259) 35.3%,
-    hsla(0, 0%, 10%, 0.352) 41.2%,
-    hsla(0, 0%, 10%, 0.45) 47.1%,
-    hsla(0, 0%, 10%, 0.55) 52.9%,
-    hsla(0, 0%, 10%, 0.648) 58.8%,
-    hsla(0, 0%, 10%, 0.741) 64.7%,
-    hsla(0, 0%, 10%, 0.825) 71%,
-    hsla(0, 0%, 10%, 0.896) 77.5%,
-    hsla(0, 0%, 10%, 0.951) 84.5%,
-    hsla(00, 0%, 10%, 0.987) 91.9%,
-    var(--background-primary)
-  );
-  --article-cover: linear-gradient(
-    180deg,
-    rgba(33, 33, 33, 0),
-    rgba(33, 33, 33, 0.013) 8.1%,
-    rgba(33, 33, 33, 0.049) 15.5%,
-    rgba(33, 33, 33, 0.104) 22.5%,
-    rgba(33, 33, 33, 0.175) 29%,
-    rgba(33, 33, 33, 0.259) 35.3%,
-    rgba(33, 33, 33, 0.352) 41.2%,
-    rgba(33, 33, 33, 0.45) 47.1%,
-    rgba(33, 33, 33, 0.55) 52.9%,
-    rgba(33, 33, 33, 0.648) 58.8%,
-    rgba(33, 33, 33, 0.741) 64.7%,
-    rgba(33, 33, 33, 0.825) 71%,
-    rgba(33, 33, 33, 0.896) 77.5%,
-    rgba(33, 33, 33, 0.951) 84.5%,
-    rgba(33, 33, 33, 0.987) 91.9%,
-    var(--background-secondary)
-  );
+  /* 横幅遮盖颜色 */
+  /* prettier-ignore */
+  --banner-cover: linear-gradient(180deg, hsla(0, 0%, 10%, 0) 0, hsla(0, 0%, 10%, .01) 8.1%, hsla(0, 0%, 10%, .049) 15.5%, hsla(0, 0%, 10%, .104) 22.5%, hsla(0, 0%, 10%, .175) 29%, hsla(0, 0%, 10%, .259) 35.3%, hsla(0, 0%, 10%, .352) 41.2%, hsla(0, 0%, 10%, .45) 47.1%, hsla(0, 0%, 10%, .55) 52.9%, hsla(0, 0%, 10%, .648) 58.8%, hsla(0, 0%, 10%, .741) 64.7%, hsla(0, 0%, 10%, .825) 71%, hsla(0, 0%, 10%, .896) 77.5%, hsla(0, 0%, 10%, .951) 84.5%, hsla(00, 0%, 10%, .987) 91.9%, var(--background-primary));
+  /* 文章水平遮盖颜色 */
+  /* prettier-ignore */
+  --article-cover-horizontal: linear-gradient(180deg, hsla(0, 0%, 13%, 0) 0, hsla(0, 0%, 13%, .013) 8.1%, hsla(0, 0%, 13%, .049) 15.5%, hsla(0, 0%, 13%, .104) 22.5%, hsla(0, 0%, 13%, .175) 29%, hsla(0, 0%, 13%, .259) 35.3%, hsla(0, 0%, 13%, .352) 41.2%, hsla(0, 0%, 13%, .45) 47.1%, hsla(0, 0%, 13%, .55) 52.9%, hsla(0, 0%, 13%, .648) 58.8%, hsla(0, 0%, 13%, .741) 64.7%, hsla(0, 0%, 13%, .825) 71%, hsla(0, 0%, 13%, .896) 77.5%, hsla(0, 0%, 13%, .951) 84.5%, hsla(00, 0%, 13%, .987) 91.9%, var(--background-secondary));
+  /* 文章垂直遮盖颜色 */
+  /* prettier-ignore */
+  --article-cover-vertical: linear-gradient(90deg, hsla(0, 0%, 13%, 0) 0, hsla(0, 0%, 13%, .013) 8.1%, hsla(0, 0%, 13%, .049) 15.5%, hsla(0, 0%, 13%, .104) 22.5%, hsla(0, 0%, 13%, .175) 29%, hsla(0, 0%, 13%, .259) 35.3%, hsla(0, 0%, 13%, .352) 41.2%, hsla(0, 0%, 13%, .45) 47.1%, hsla(0, 0%, 13%, .55) 52.9%, hsla(0, 0%, 13%, .648) 58.8%, hsla(0, 0%, 13%, .741) 64.7%, hsla(0, 0%, 13%, .825) 71%, hsla(0, 0%, 13%, .896) 77.5%, hsla(0, 0%, 13%, .951) 84.5%, hsla(00, 0%, 13%, .987) 91.9%, var(--background-secondary));
   --border-color-normal: #30363d;
   --border-color-bright: #4c4d4f;
 
