--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
-@import '../css/theme.css';
-@import '../css/el.css';
+@use '../css/theme.css';
+@use '../css/el.css';
 
 body {
   margin: 0;
@@ -11,7 +11,7 @@ body {
   // Aurora
   --main-gradient: linear-gradient(130deg, #24c6dc, #5433ff 41.07%, #ff0099 76.05%);
   --strong-gradient: linear-gradient(62deg, #188bfd 0%, #a03bff 100%);
-  --main-transition: all 0.25s ease-in-out;
+  --main-transition: all 0.5s ease-in-out;
   --text-vip: rgb(251, 146, 60);
 
   background-color: var(--background-primary);
